# betafold

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  compile_commands.json  setup.py
cbetafold/: main.cpp
cbetafold/include/exceptions/: BetafoldError.h
cbetafold/include/training/: Trainer.h
cbetafold/src/: bindings.cpp
cbetafold/src/exceptions/: BetafoldError.cpp
cbetafold/src/training/: Trainer.cpp
docs/: GettingStartedWithBetafold.md  transformers_analogs.txt
docs/source/: conf.py  index.rst
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/: main.cpp
tests/cbetafold/training/: test_trainer.py
